# SimpleYoutube

./: README.md  local.db  localdb.db  main.py  play.ipynb  pyproject.toml  pytest.ini
database/: read_tables.sql  table_creation.sql  table_creation_simple.sql  update_tables.sql
src/: helper.py  model.py  simple_model.py  youtube_api.py
src/routes/: __init__.py  channels.py  client.py  playlist.py
tests/: sql_testing.py  tests.py
utils/: logger.py  security.py
