[project]
name = "simpleyoutube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
